--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ Theme URI: https://it.clas.ufl.edu/services/web-services/
 Author: Priscilla Chapman (CLAS IT)
 Author URI: https://it.clas.ufl.edu/
 Description: Official UF template for Liberal Arts and Sciences. Based on 160 over 90 template.
-Version: 0.4.2
+Version: 0.5.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ufclas-ufl-2015
-Build Date: 20161114
+Build Date: 20161115
 */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, .kicker, .gform_wrapper .gform_heading .gform_description, .single-article .entry-content p.lead, .featured-story h2, .single-article #secondary h2, h4, h5, dt, h6, p, blockquote, pre,
@@ -4040,6 +4040,10 @@ strong {
     color: #444; }
 .alert-small .alert-link:hover {
   color: #000; }
+.alert-small .icon-alert svg {
+  transform: translate(0px, 0px);
+  margin-left: -12px;
+  margin-top: -12px; }
 
 @media (min-width: 768px) {
   .main-menu-wrap {
